zeit.archive changes
====================

0.7.1 (unreleased)
==================

- Nothing changed yet.


0.7.0 (2010-02-08)
==================

- Automatisches anlegen eines Breadcrumb-Indexes beim Veröffentlichen (#6749).

- Weitere product_ids hinzugefügt.


0.6.1 (2009-11-25)
==================

- Überprüfung beim Löschen ob ein Artikel bereits durch Zurückziehen aus der
  Archivseite entfernt wurde.


0.6.0 (2009-11-09)
==================

- Für die Jahresübersichtsseite werden Container nun auch über
  die Methode rebuildVolume korrekt angelegt (siehe 0.4).

- Encoding der Typ-Bezeichnung korrigiert.

- Es werden nun nur noch Artikel mit der product_id "ZEI" (Print-Artikel) zu
  einer Archivseite hinzugefügt.


0.5.1 (2009-10-12)
==================

- Tests repariert.


0.5 (2009-10-05)
================

- Neuer Eventhandler für zurückgezogene Artikel.

- Automatische Veröffentlichung von Archivseiten.


0.4 (2009-09-05)
================

- Jede erschienene Ausgabe in der Jahresübersichtsseite enthält nun auch
  dann einen Container, wenn noch keine Seite 1 veröffentlicht wurde.

- Korrekte Bezeichnung der Index-Seiten.


0.3 (2009-08-31)
================

- Rekursive Indizierung alter Ausgaben neu geschrieben.

- Der Archiv-Index muss eine Centerpage sein. Ist sie das nicht, wird das
  Objekt überschrieben (#6123).


0.2 (2009-08-21)
================

- Jahresindex für Print-Archivseiten hinzugefügt.

- Layout für Printarchivseiten in Volume und Year unterteilt.


0.1 (2009-07-29)
================

- first release.